--- a/api/package.json
+++ b/api/package.json
@@ -13,9 +13,13 @@
     "dotenv": "^2.0.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
-    "mongoose": "^4.7.4",
+    "express-session": "^1.14.2",
+    "mongoose": "^4.7.6",
     "morgan": "~1.7.0",
     "node-fetch": "^1.6.3",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
